# evolve-common

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  example.env  pyproject.toml  requirements-minimal.txt  requirements.txt  tencent_deploy_key  tencent_deploy_key.pub  test_document_conversion.py  test_html_conversion.py
.cursor/rules/: architecture.mdc
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0733db020b53_add_document_node_model.py  0c44f3fed213_simplify_node_types.py  70319cbe8799_add_document_node_model.py  9db4109bb4d4_add_resources_path_to_processed_document.py  c6079f4a03c7_add_documents_table.py  e82ec850b73e_add_processed_document.py  fdca9cb69b06_add_processed_document_table.py
api/: index.py
api/core/: config.py
api/db/: base.py  session.py
api/endpoints/: documents.py
api/models/: document.py  document_node.py  processed_document.py
api/schemas/: __init__.py  document.py  document_node.py  processed_document.py
api/services/: document_processing_service.py  document_service.py  document_structure_service.py  mammoth_document_service.py
nginx/: file-processor.conf
scripts/: debug-docker.sh  debug-nginx.sh  free-postgres-port.sh  generate_requirements.sh  pre-commit-check.sh  setup-git-hooks.sh
tests/: README.md  test_docling_conversion.py  test_document_processing.py  test_docx_conversion.py  test_pdf_conversion.py
