[tool.poetry]
name = "evolve-common"
version = "0.1.0"
description = "Common backend services for Evolve AI applications."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
docling = "^2.36.1"
# 使用完整的 langchain 但减少其他依赖
langchain = "^0.2.5"  # 包含 HTMLHeaderTextSplitter
beautifulsoup4 = "^4.12.3"  # HTML 解析器
python-multipart = "^0.0.9"  # 处理文件上传
aiofiles = "^23.2.1"  # 异步文件操作
# For potential OSS file storage
boto3 = "^1.34.111"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 