[tool.poetry]
name = "evolve-common"
version = "0.1.0"
description = "Common backend services for Evolve AI applications."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1" 
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.7"
aiofiles = "^0.8.0"
# 文档处理相关依赖
docling = "2.36.1"
docling-core = "2.34.2"
beautifulsoup4 = "^4.13.4"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
pymupdf = "^1.26.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 