[tool.poetry]
name = "evolve-file-processor"
version = "0.1.0"
description = "File processing backend services for Evolve AI applications."
authors = ["abigail830@163.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1" 
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.7"
aiofiles = "^0.8.0"

# 核心文档处理依赖 - 使用无依赖安装方案 (--no-deps)
# 注意：在CI/CD中我们会使用--no-deps安装docling，避免安装torch等大型依赖
docling = "2.36.1"  # 使用--no-deps安装可避免安装torch等重型依赖
docling-core = "2.34.2"
beautifulsoup4 = "^4.13.4"
lxml = "^5.4.0"
pillow = "^11.2.1"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"
pymupdf = "^1.26.1"
openpyxl = "^3.1.5"
rtree = "^1.4.0"

# 已从默认依赖中移除的重型包
# - torch、torchvision (1-2GB大小)
# - transformers、numpy、scipy (大型ML库)
# - docling-ibm-models (包含预训练模型)
# - easyocr (OCR引擎)
# - unstructured (包含很多额外依赖)

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# 自定义安装命令，用于CI/CD流程中轻量级安装
[tool.custom.lightweight-install]
pip_command = "pip install -e . --no-deps && pip install docling-core beautifulsoup4 lxml pillow python-docx python-pptx pymupdf openpyxl rtree pydantic" 